--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="row">
         <div class="col-xs-10 col-md-5 align-self-center text-center">
             <center>
-                <img class="profile-photo img-fluid img-thumbnail rounded-circle" src="images/profile-pic.jpeg" alt="Myke's Profile Photo">
+                <img class="profile-photo img-fluid img-thumbnail rounded-circle" src="images/profile-pic.jpeg" alt="Myke's Profile Photo" width="50" height="50">
             </center>
             <h1 class="font-weight-bolder">Myke Morais de Oliveira</h1>
 
