--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 
 </head>
   <body>
+    <header>
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- justify-content-between -->
+    <div class="collapse navbar-collapse justify-content-lg-center" id="navbarCollapse">
+      <ul class="navbar-nav">
+        </ul>   
+    </div>
+    
+  </nav>
+    <\header>
 
     <main role="main" class=" my-3 pb-2">
       <div class="container">
