--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
             </p>
 
-            <p class="h3 text-nd-blue font-weight-bolder textsc">Research Interests</p>
-            Text
+            <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
+            OLIVEIRA, M. M.; PASCHOAL, L. N. ; BARBOSA, E. F. . Quality Models and Quality Attributes for Open Educational Resources: a Systematic Mapping. In: IEEE Frontiers in Education (FIE), 2021, Lincoln. Proceedings of the 51h Annual Frontiers in Education (FIE 2021), 2021.
             
+            OLIVEIRA, K. K. S. ; FIORAVANTI, M. L. ; OLIVEIRA, M. M. ; BARBOSA, E. F. ; SOUZA, R. A. C. . Avaliando a Percepção de Inovação e Aceitação de uma Ferramenta de Suporte à Educação 4.0. In: Simpósio Brasileiro de Informática na Educação (SBIE), 2021, Porto Alegre. XXXII SIMPÓSIO BRASILEIRO DE INFORMÁTICA NA EDUCAÇÃO, 2021.
+            
+            PASCHOAL, Leo Natan ; Biazotto, João Paulo ; Oliveira, Myke Morais de ; Spengler, Ana Caroline Fernandes . ESTIMANDO A USABILIDADE DE UM SIMULADOR DE APOIO AO ENSINO E APRENDIZAGEM DE POLÍTICAS DE ESCALONAMENTO DE PROCESSOS: UM RELATO DE TESTES DE USUÁRIO. Ensino, Pesquisa e Desenvolvimento na Engenharia Eletrônica e Computação. 1ed.: Atena Editora, 2021, v. , p. 70-87.
             <p class="h3 text-nd-blue font-weight-bolder textsc">Honors & Awards</p>
             Text
         </div>
