--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
             
-            <p class=" align-self-center " text-indent: 3ch>
+            <p font-size: 0.475em>
               OLIVEIRA, M. M.; PASCHOAL, L. N. ; BARBOSA, E. F. . Quality Models and Quality Attributes for Open Educational Resources: a Systematic Mapping. In: IEEE Frontiers in Education (FIE), 2021, Lincoln. Proceedings of the 51h Annual Frontiers in Education (FIE 2021), 2021.
             </p> <p>
               OLIVEIRA, K. K. S. ; FIORAVANTI, M. L. ; OLIVEIRA, M. M. ; BARBOSA, E. F. ; SOUZA, R. A. C. . Avaliando a Percepção de Inovação e Aceitação de uma Ferramenta de Suporte à Educação 4.0. In: Simpósio Brasileiro de Informática na Educação (SBIE), 2021, Porto Alegre. XXXII SIMPÓSIO BRASILEIRO DE INFORMÁTICA NA EDUCAÇÃO, 2021.
