--- a/index.html
+++ b/index.html
@@ -116,19 +116,39 @@
         </div>
         <div class="col-md-7 text-justify">
             <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
-            <p class=" align-self-center ">
+            <p class=" align-self-center "> <font size="-1">
                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
-            </p>
+              </font> </p>
 
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
             
             <p> <font size="-1">
               OLIVEIRA, M. M.; PASCHOAL, L. N. ; BARBOSA, E. F. . Quality Models and Quality Attributes for Open Educational Resources: a Systematic Mapping. In: IEEE Frontiers in Education (FIE), 2021, Lincoln. Proceedings of the 51h Annual Frontiers in Education (FIE 2021), 2021.
-              </font> </p> <p>
+             </font> </p> <p> <font size="-1">
               OLIVEIRA, K. K. S. ; FIORAVANTI, M. L. ; OLIVEIRA, M. M. ; BARBOSA, E. F. ; SOUZA, R. A. C. . Avaliando a Percepção de Inovação e Aceitação de uma Ferramenta de Suporte à Educação 4.0. In: Simpósio Brasileiro de Informática na Educação (SBIE), 2021, Porto Alegre. XXXII SIMPÓSIO BRASILEIRO DE INFORMÁTICA NA EDUCAÇÃO, 2021.
-            </p> <p class=" align-self-center ">
+             </font> </p> <p> <font size="-1">
               PASCHOAL, Leo Natan ; Biazotto, João Paulo ; Oliveira, Myke Morais de ; Spengler, Ana Caroline Fernandes . ESTIMANDO A USABILIDADE DE UM SIMULADOR DE APOIO AO ENSINO E APRENDIZAGEM DE POLÍTICAS DE ESCALONAMENTO DE PROCESSOS: UM RELATO DE TESTES DE USUÁRIO. Ensino, Pesquisa e Desenvolvimento na Engenharia Eletrônica e Computação. 1ed.: Atena Editora, 2021, v. , p. 70-87.
-            </p>
+              </font> </p> <p> <font size="-1">
+              OLIVEIRA, M. M.; PASCHOAL, L. N. ; MOZZAQUATRO, P. M. ; BARBOSA, E. F. . Towards an Open Educational Resource Sensitive to Student's Context to Support Introductory Programming Courses. In: IEEE Frontiers in Education Conference, 2020, Uppsala. Proceedings of the 50th Annual Frontiers in Education (FIE 2020), 2020.
+              </font> </p> <p> <font size="-1">
+              PASCHOAL, L. N. ; KRASSMANN, A. L. ; NUNES, F. B. ; OLIVEIRA, M. M. ; BERCHT, M. ; BARBOSA, E. F. ; SOUZA, S. R. S. . A Systematic Identification of Pedagogical Conversational Agents. In: IEEE Frontiers in Education Conference, 2020, Uppsala. Proceedings of the 50th Annual Frontiers in Education (FIE 2020), 2020.
+              </font> </p> <p> <font size="-1">
+              PASCHOAL, L. N. ; OLIVEIRA, M. M. ; MELO, S. ; BARBOSA, E. F. ; SOUZA, S. R. S. . Evaluating the impact of Software Testing Education throughthe Flipped Classroom Model in deriving Test Requirements. In: Brazilian Symposium on Software Engineering (SBES), 2020, Natal. 34th Brazilian Symposium on Software Engineering, 2020.
+              </font> </p> <p> <font size="-1">
+              OLIVEIRA, M. M.; PIAS, M. R. ; BARWALDT, R. ; ESPINDOLA, D. B. . Understanding the Student Dropout in Distance Learning. In: Frontiers in Education (FIE), 2019, Covington, KY. 2019 IEEE Frontiers in Education Conference (FIE), 2019. p. 1-7.
+              </font> </p> <p> <font size="-1">
+
+            PINHO, P. C. R. ; BARWALDT, R. ; ESPINDOLA, D. B. ; TORRES, M. ; PIAS, M. R. ; TOPIN, L. ; BORBA, A. ; OLIVEIRA, M. M. . Developments in Educational Recommendation Systems: a systematic review. In: Frontiers in Education (FIE), 2019, Covington, KY. 2019 IEEE Frontiers in Education Conference (FIE), 2019. p. 1-7.
+            </font> </p> <p> <font size="-1">
+
+            GONCALVES, M. C. ; FREITAS, A. L. C. ; GONCALVES, E. M. ; BARWALDT, R. ; MACHADO, R. N. ; OTERO, T. F. ; OLIVEIRA, M. M. . Gamification as a Strategy to Improve Students? Motivation and Engagement in Educational Environments at Engineering Courses: bibliographic review. In: Frontiers in Education (FIE), 2019, Covington, KY. 2019 IEEE Frontiers in Education Conference (FIE), 2019. p. 1-5.
+            </font> </p> <p> <font size="-1">
+
+            PASCHOAL, L. N. ; BIAZOTTO, J. P. ; SPENGLER, A. C. F. ; OLIVEIRA, M. M. ; FELIZARDO, K. ; NAKAGAWA, E. Y. . Towards an Educational Simulator to Support the CPU Scheduling Algorithm Education. In: International Symposium on Computers in Education (SIIE), 2019, Tomar. Proceedings of the 21st International Symposium on Computers in Education (SIIE), 2019. p. 1-6.
+            </font> </p> <p> <font size="-1">
+            PASCHOAL, Leo Natan ; DE OLIVEIRA, MYKE MORAIS ; CHICON, PATRICIA MARIOTTO MOZZAQUATRO . A Chatterbot Sensitive to Student's Context to Help on Software Engineering Education. In: 2018 XLIV Latin American Computer Conference (CLEI), 2018, São Paulo. 2018 XLIV Latin American Computer Conference (CLEI), 2018. p. 839.
+            </font> </p>
+          
           <p class="h3 text-nd-blue font-weight-bolder textsc">Honors & Awards</p>
             Text
         </div>
