--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main role="main" class=" my-3 pb-2">
       <div class="container">
     <div class="row">
-        <div class="ccol-md-7 text-justify">
+        <div class="m-0 font-weight-bolder text-monospace text-nd-blue" overflow-y: auto>
             <center>
                 <img class="profile-photo img-fluid img-thumbnail rounded-circle" src="images/profile-pic.jpeg" alt="Myke's Profile Photo" width="270" height="270">
             </center>
