--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main role="main" class=" my-3 pb-2">
       <div class="container">
     <div class="row">
-        <div class="col-xs-10 col-md-5 align-self-center text-center">
+        <div class="col-xs-10 col-md-5 align-self-center text-center" style="height:700px;width:480px;border:1px solid #4e4e4e;overflow:auto;">
             <center>
                 <img class="profile-photo img-fluid img-thumbnail rounded-circle" src="images/profile-pic.jpeg" alt="Myke's Profile Photo" width="270" height="270">
             </center>
