--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main role="main" class=" my-3 pb-2">
       <div class="container">
     <div class="row">
-        <div class="col-xs-10 col-md-5 align-self-center text-center" style="height:700px;width:480px;border:1px solid #4e4e4e;overflow:auto;">
+        <div class="col-xs-10 col-md-5 align-self-center text-center">
             <center>
                 <img class="profile-photo img-fluid img-thumbnail rounded-circle" src="images/profile-pic.jpeg" alt="Myke's Profile Photo" width="270" height="270">
             </center>
@@ -114,7 +114,7 @@
             
 
         </div>
-        <div class="col-md-7 text-justify">
+        <div class="col-md-7 text-justify" style="height:700px;width:480px;overflow:auto;">
             <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
             <p class=" align-self-center "> <font size="-1">
                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
