--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
   <body>
     <header>
-       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="height:150px;background-color:brown">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
