--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
   <body>
     <header>
-       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="height:150px;background-color:brown">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="height:50px;background-color:brown">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -117,7 +117,7 @@
         <div class="col-md-7 text-justify" style="height:700px;width:480px;overflow:auto;">
             <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
             <p class=" align-self-center "> <font size="-1">
-                Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
+                &nbsp &nbsp Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
               </font> </p>
 
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
