--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 
         </div>
         <div class="col-md-7 text-justify" style="height:700px;width:480px;overflow:auto;">
-            <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
+            <br/> <br/> <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
             <p class=" align-self-center "> <font size="-1">
-                &nbsp &nbsp Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
+                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
               </font> </p>
 
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
