--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             <p class=" align-self-center "> <font size="-1">
                  Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
               </font> </p>
-          <center><img src="images/IMG_5961.jpeg" alt="Myke's Photo" width="370" height="270"></center>
-          <figcaption>First participation in an international conference - Frontiers in Education - Cincinnati - US.</figcaption>
+          <center><img src="images/IMG_5961.jpeg" alt="Myke's Photo" width="370" height="270">
+          <figcaption> <font size="-2"> First participation in an international conference - Frontiers in Education - Cincinnati - US.</figcaption></center></br>
 
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
             
