--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="col-md-7 text-justify" style="height:700px;width:480px;overflow:auto;">
             <br/> <br/> <p class="h3 text-nd-blue font-weight-bolder textsc">About me</p>
             <p class=" align-self-center "> <font size="-1">
-                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
+                 Myke Morais de Oliveira is a Doctoral candidate in the Computer Science and Computational Mathematics program at the University of São Paulo. He has an MBA in Data Science and Analytics from the same university. Also, he has a Master's degree in Computer Engineering from the Federal University of Rio Grande and a Bachelor's degree in Computer Science from the Cruz Alta University. He is a member of the Applied Computing in Education Lab (CAEd). Currently, his main research topics are Machine Learning, Data Science, and Educational Data Mining.
               </font> </p>
           <center><img src="images/IMG_5961.jpeg" alt="Myke's Photo" width="370" height="270">
           <figcaption> <font size="-2"> First participation in an international conference - Frontiers in Education - Cincinnati - US.</figcaption></center></br>
@@ -125,6 +125,8 @@
             <p class="h3 text-nd-blue font-weight-bolder textsc">Research Publications</p>
             
             <p> <font size="-1">
+              OLIVEIRA, M. M.; BARBOSA, E. F. . Multilevel modeling for the analysis and prediction of school dropout: a systematic review. In: Computers, Software, and Applications Conference (COMPSAC), 2023, Turin, Italy. 2023 IEEE 47th Annual Computers, Software, and Applications Conference.
+              </font> </p> <p> <font size="-1">
               OLIVEIRA, M. M.; PASCHOAL, L. N. ; BARBOSA, E. F. . Quality Models and Quality Attributes for Open Educational Resources: a Systematic Mapping. In: IEEE Frontiers in Education (FIE), 2021, Lincoln. Proceedings of the 51h Annual Frontiers in Education (FIE 2021), 2021.
              </font> </p> <p> <font size="-1">
               OLIVEIRA, K. K. S. ; FIORAVANTI, M. L. ; OLIVEIRA, M. M. ; BARBOSA, E. F. ; SOUZA, R. A. C. . Avaliando a Percepção de Inovação e Aceitação de uma Ferramenta de Suporte à Educação 4.0. In: Simpósio Brasileiro de Informática na Educação (SBIE), 2021, Porto Alegre. XXXII SIMPÓSIO BRASILEIRO DE INFORMÁTICA NA EDUCAÇÃO, 2021.
